--- a/advocacy.html
+++ b/advocacy.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="wpOceans">
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
-    <title>Charitio - Multipurpose Charity Nonprofit HTML5 Template</title>
+    <title>Better Life Program for the African Rural Woman (BLPARW)</title>
     <link href="assets/css/themify-icons.css" rel="stylesheet">
     <link href="assets/css/flaticon.css" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -228,8 +228,8 @@
                     <div class="col-12">
                         <div class="wpo-cta-section">
                             <div class="wpo-cta-content">
-                                <h2> Become a Partnet and Save Lifes</h2>
-                                <a href="volunteer.html">Join With Us</a>
+                                <h2> Become a Partner to Transform Lives</h2>
+                                <a href="volunteer.html">Volunteer</a>
                             </div>
                             <div class="volunteer-img">
                                 <img src="assets/images/bird.png" alt="">
