--- a/cottage-industry.html
+++ b/cottage-industry.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="wpOceans">
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
-    <title>Charitio - Multipurpose Charity Nonprofit HTML5 Template</title>
+    <title>Better Life Program for the African Rural Woman (BLPARW)</title>
     <link href="assets/css/themify-icons.css" rel="stylesheet">
     <link href="assets/css/flaticon.css" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -141,7 +141,9 @@
                                 <h2>Shea Nut Project</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                     incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices
-                                    gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+                                    gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua.</p>
                                    <div class="row">
                                        <div class="col-lg-6 col-md-6 col-sm-12">
                                         <div class="wpo-total-project">
@@ -194,7 +196,9 @@
                                 <h2>Multi crop</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                     incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices
-                                    gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+                                    gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua.</p>
                                     <div class="row">
                                         <div class="col-lg-6 col-md-6 col-sm-12">
                                          <div class="wpo-total-project">
@@ -263,7 +267,9 @@
                                 <h2>Multi crop</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                     incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices
-                                    gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+                                    gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua.</p>
                                     <div class="row">
                                         <div class="col-lg-6 col-md-6 col-sm-12">
                                          <div class="wpo-total-project">
@@ -315,6 +321,7 @@
                                         <div class="wpo-about-img">
                                             <img src="assets/images/cottage/multitrade.png" alt="">
                                         </div>
+										<div class="ab-shape"><img src="assets/images/slider/right-img5.png" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-md-12 col-12">
@@ -323,7 +330,9 @@
                                         <h2>Multi Trade Project</h2>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                             incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices
-                                            gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+                                            gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                            incididunt ut labore et dolore magna aliqua.</p>
                                             <div class="row">
                                                 <div class="col-lg-6 col-md-6 col-sm-12">
                                                  <div class="wpo-total-project">
