--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,6 @@
                     <div class="loader-line-mask">
                         <div class="loader-line"></div>
                     </div>
-                    <img src="assets/images/preloader.png" alt="">
                 </div>
             </div>
         </div>
@@ -138,7 +137,7 @@
                                         </div>
                                         <div class="office-info-text">
                                             <h2>Address</h2>
-                                            <p>7 Green Lake Street Crawfordsville, IN 47933</p>
+                                            <p> 90 Aminu Kano Crescent, Wuse 2, Abuja, Nigeria</p>
                                         </div>
                                     </div>
                                 </div> 
@@ -151,8 +150,8 @@
                                         </div>
                                         <div class="office-info-text">
                                             <h2>Email Us</h2>
-                                            <p>Charito@gmail.com</p>
-                                            <p>helloyou@gmail.com</p>
+                                            <p>info@betterlife-africa.org</p>
+                                            <p>info@betterlife-africa.org</p>
                                         </div>
                                     </div>
                                 </div> 
@@ -165,8 +164,8 @@
                                         </div>
                                         <div class="office-info-text">
                                             <h2>Call Now</h2>
-                                            <p>+1 800 123 456 789</p>
-                                            <p>+1 800 123 654 987</p>
+                                            <p>(+234) 906 960 8053</p>
+                                            <p>(+234) 906 960 8053</p>
                                         </div>
                                     </div>
                                 </div> 
@@ -174,8 +173,7 @@
                         </div>
                         <div class="wpo-contact-title">
                             <h2>Have Any Question?</h2>
-                            <p>It is a long established fact that a reader will be distracted
-                                content of a page when looking.</p>
+                            <p>Send us a message we are readily available to respond</p>
                         </div>
                         <div class="wpo-contact-form-area">
                             <form method="post" class="contact-validation-active" id="contact-form-main">
@@ -221,7 +219,7 @@
         <section class="wpo-contact-map-section">
             <h2 class="hidden">Contact map</h2>
             <div class="wpo-contact-map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193595.9147703055!2d-74.11976314309273!3d40.69740344223377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbd!4v1547528325671" allowfullscreen></iframe>
+                <iframe src="https://maps.google.com/maps?q=90%20Aminu%20Kano%20Crescent,%20Wuse%202,%20Abuja,%20Nigeria&t=&z=13&ie=UTF8&iwloc=&output=embed"  allowfullscreen></iframe>
             </div>
         </section>
         <!-- end wpo-contact-map -->
