New Pages for contact and impact 500

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 <body>
 
     <!-- start page-wrapper -->
-    <div class="page-wrapper">
+    <div class="page-wrapper contact-page">
         <!-- start preloader -->
         <div class="preloader">
             <div class="vertical-centered-box">
@@ -151,7 +151,7 @@
                                         <div class="office-info-text">
                                             <h2>Email Us</h2>
                                             <p>info@betterlife-africa.org</p>
-                                            <p>info@betterlife-africa.org</p>
+                                           
                                         </div>
                                     </div>
                                 </div> 
@@ -165,7 +165,7 @@
                                         <div class="office-info-text">
                                             <h2>Call Now</h2>
                                             <p>(+234) 906 960 8053</p>
-                                            <p>(+234) 906 960 8053</p>
+                                            
                                         </div>
                                     </div>
                                 </div> 
