Changes made except impact and chairperson

--- a/bgirl.html
+++ b/bgirl.html
@@ -124,8 +124,8 @@
         <!-- end of wpo-breadcumb-section-->
         <section class="wpo-project-single-section section-padding">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-10 offset-lg-1">
+                <div class="row justify-content-center">
+                    <div class="col-lg-12">
                         <div class="wpo-project-single-wrap">
                             <div class="wpo-project-single-content">
                                 <img src="assets/images/b-girl/b-girl-image.png" alt="">
@@ -139,32 +139,100 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="wpo-solutions-section wpo-features-section-s2">
-                                <h2>Our Focus</h2>
-                                <div class="row pt-5">
-                                    <div class=" col-lg-6  col-md-6 col-sm-12">
-                                        <div class="wpo-features-item">
-                                            <div class="wpo-features-icon">
-                                                <div class="icon">
-                                                    <img src="assets/images/advocacy/adult-literacy.png" alt="adult literacy">
+                            <section class="wpo-features-section-s2 v1 section-padding">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col col-xl-3 col-lg-6 col-sm-6 col-12">
+                                            <div class="wpo-features-item">
+                                                <div class="wpo-features-icon">
+                                                    <div class="icon">
+                                                        <img src="assets/images/b-girl/science.png" alt="science">
+                                                    </div>
+                                                </div>
+                                                <div class="wpo-features-text">
+                                                    <h2><a href="service-single.html">Science</a></h2>
                                                 </div>
                                             </div>
-                                            <div class="wpo-features-text">
-                                                <h2><a href="#">Empower, Motivate and spark Interest</a></h2>
-                                                <p>Helping African women develop and improve their abilities to read and write. Building their self-esteem and self-confidence. We are extending this effort to developing skills to support African women on greater initiatives.</p>
+                                        </div>
+                                        <div class="col col-xl-3 col-lg-6 col-sm-6 col-12">
+                                            <div class="wpo-features-item">
+                                                <div class="wpo-features-icon">
+                                                    <div class="icon">
+                                                        <img src="assets/images/b-girl/technology.png" alt="technology">
+                                                    </div>
+                                                </div>
+                                                <div class="wpo-features-text">
+                                                    <h2><a href="service-single.html">Technology</a></h2>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col col-xl-3 col-lg-6 col-sm-6 col-12">
+                                            <div class="wpo-features-item">
+                                                <div class="wpo-features-icon">
+                                                    <div class="icon">
+                                                        <img src="assets/images/b-girl/engineering.png" alt="engineering">
+                                                    </div>
+                                                </div>
+                                                <div class="wpo-features-text">
+                                                    <h2><a href="service-single.html">Engineering</a></h2>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col col-xl-3 col-lg-6 col-sm-6 col-12">
+                                            <div class="wpo-features-item">
+                                                <div class="wpo-features-icon">
+                                                    <div class="icon">
+                                                        <img src="assets/images/b-girl/mathematics.png" alt="mathematics">
+                                                    </div>
+                                                </div>
+                                                <div class="wpo-features-text">
+                                                    <h2><a href="service-single.html">Mathematics</a></h2>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-6 col-md-6 col-sm-12" >
-                                        <div class="wpo-features-item feature-item-2">
-                                            <div class="wpo-features-icon">
-                                                <div class="icon">
-                                                    <img src="assets/images/advocacy/empowerment.png" alt="enpowerment">
+                                </div>
+                            </section>
+                            <div class="wpo-solutions-section wpo-features-section-s2"> 
+                                <div class="wpo-campaign-area">
+                                    <div class="container">
+                                        <h2>Our Focus</h2>
+                                        <div class="wpo-campaign-wrap">
+                                            <div class="row">
+                                                <div class="col-lg-6 col-md-6 col-12">
+                                                    <div class="wpo-campaign-single">
+                                                        <div class="wpo-campaign-item">
+                                                            <div class="wpo-campaign-img">
+                                                                <img src="assets/images/campaign/1.jpg" alt="">
+                                                                <span class="thumb">Stem Clubs</span>
+                                                            </div>
+                                                            <div class="wpo-campaign-content">
+                                                                <div class="wpo-campaign-text-top">
+                                                                    <h2><a href="#">Empower, Motivate and spark Interest.</a></h2>
+                                                                    <p> Our STEM club initiative is designed to empower young girls. It attracts and encourages them to be part of a structured and fun learning journey to discover their own potentials. Club members are engaged in collaborative activities helping them build necessary skills and help them gain a new understanding of career options within the STEM fields. The program also creates a dynamic forward-thinking attitude towards life. The STEM club is an outside school set of activities.</p>
+                                                                 
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                            </div>
-                                            <div class="wpo-features-text">
-                                                <h2><a href="#">Inspire, Connect and Unlock</a></h2>
-                                                <p>Supporting the African rural woman to build the resources, assets, and capabilities she requires to make better choices and take control of her life and environment. Our goal is a long-term social and economic improvement.</p>
+                                                <div class="col-lg-6 col-md-6 col-12">
+                                                    <div class="wpo-campaign-single">
+                                                        <div class="wpo-campaign-item">
+                                                            <div class="wpo-campaign-img">
+                                                                <img src="assets/images/campaign/2.jpg" alt="">
+                                                                <span class="thumb-2">Role Models</span>
+                                                            </div>
+                                                            <div class="wpo-campaign-content">
+                                                                <div class="wpo-campaign-text-top">
+                                                                    <h2><a href="#">Inspire, Connect and Unlock</a>
+                                                                    </h2>
+                                                                    <p>Girls have a hard time picturing themselves in STEM roles. The gender STEM stereotype needs to be removed. A female role model’s success in STEM can be a source of inspiration to young girls and can be emulated. Listening to females who have attained academic and professional achievements in STEM fields is very important for young girls. The impact of female role models is like the snowball effect, it builds on and on. BLPARW is committed to inspiring girls to pursue STEM careers.</p>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
