--- a/sauki.html
+++ b/sauki.html
@@ -121,7 +121,7 @@
                 </div>
             </div>
         </div>
-        <!-- end of wpo-breadcumb-section-->
+        <!-- end breadcumb-section-->
         <!--Start of primary healthcare-->
         <section class="wpo-about-section-s5 section-padding">
             <div class="container">
@@ -132,7 +132,7 @@
                                 <div class="wpo-about-img">
                                     <img src="assets/images/cottage/sheanut.png" alt="">
                                 </div>
-                                <div class="ab-shape"><img src="assets/images/about-img-1.png" alt=""></div>
+                                <div class="ab-shape1"><img src="assets/images/about-img-1.png" alt=""></div>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-12 col-12">
@@ -267,7 +267,7 @@
                             <div class="wpo-about-img">
                                 <img src="assets/images/cottage/sheanut.png" alt="">
                             </div>
-                            <div class="ab-shape"><img src="assets/images/about-img-1.png" alt=""></div>
+                            <div class="ab-shape1"><img src="assets/images/about-img-1.png" alt=""></div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12 col-12">
