--- a/sponsor.html
+++ b/sponsor.html
@@ -121,7 +121,7 @@
                 </div>
             </div>
         </div>
-        <!-- end of wpo-breadcumb-section-->
+        <!-- end of breadcumb-section-->
         <section class="wpo-about-section-s4 section-padding">
             <div class="container">
                 <div class="row justify-content-center">
@@ -175,7 +175,96 @@
                 </div>
             </div>
         </section>
-
+     <!--Start of FAQ-->
+     <section class="wpo-service-single-section faq-section">
+         <div class="container">
+            <div class="wpo-benefits-section">
+                <h2>FAQ's</h2>
+                <div class="row">
+                    <div class="col-lg-12 col-12">
+                        <div class="wpo-benefits-item">
+                            <div class="accordion" id="accordionExample">
+                                <div class="accordion-item">
+                                    <h3 class="accordion-header" id="headingOne">
+                                        <button class="accordion-button" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                                            aria-expanded="true" aria-controls="collapseOne">
+                                            We Can Save More Lifes With Your Helping Hand.
+                                        </button>
+                                    </h3>
+                                    <div id="collapseOne" class="accordion-collapse collapse show"
+                                        aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                        <div class="accordion-body">
+                                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                                Eum exercitationem pariatur iure nemo esse repellendus
+                                                est quo recusandae. Delectus, maxime.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h3 class="accordion-header" id="headingTwo">
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#collapseTwo"
+                                            aria-expanded="false" aria-controls="collapseTwo">
+                                            Planning can help alleviate workplace stress and increase
+                                            productivity.
+                                        </button>
+                                    </h3>
+                                    <div id="collapseTwo" class="accordion-collapse collapse"
+                                        aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                                        <div class="accordion-body">
+                                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                                Eum exercitationem pariatur iure nemo esse repellendus
+                                                est quo recusandae. Delectus, maxime.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h3 class="accordion-header" id="headingThree">
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#collapseThree"
+                                            aria-expanded="false" aria-controls="collapseThree">
+                                            Those who experiment the most, are able to innovate the
+                                            best.
+                                        </button>
+                                    </h3>
+                                    <div id="collapseThree" class="accordion-collapse collapse"
+                                        aria-labelledby="headingThree"
+                                        data-bs-parent="#accordionExample">
+                                        <div class="accordion-body">
+                                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                                Eum exercitationem pariatur iure nemo esse repellendus
+                                                est quo recusandae. Delectus, maxime.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h3 class="accordion-header" id="headingFour">
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#collapseFour"
+                                            aria-expanded="false" aria-controls="collapseFour">
+                                            Understand Your Problem, You must understand the issue.
+                                        </button>
+                                    </h3>
+                                    <div id="collapseFour" class="accordion-collapse collapse"
+                                        aria-labelledby="headingFour"
+                                        data-bs-parent="#accordionExample">
+                                        <div class="accordion-body">
+                                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                                Eum exercitationem pariatur iure nemo esse repellendus
+                                                est quo recusandae. Delectus, maxime.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+         </div>
+     </section>
+  
+    <!--End of FAQ-->
         <!-- start of wpo-site-footer-section -->
         <footer class="wpo-site-footer">
             <div class="wpo-upper-footer">
