changes to chairperson

--- a/about.html
+++ b/about.html
@@ -292,15 +292,13 @@
         </section>
         <!--end of testimonial section-->
         <!--Team section-->
-        <section class="wpo-team-area-s2 section-padding">
+        <div class="wpo-team-area section-padding">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
                         <div class="wpo-section-title">
-                            <span>Expert Team</span>
-                            <h2>Meet Our Volunteer Team</h2>
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                                suffered alteration in some form,</p>
+                            <span>ChairPerson</span>
+                            <h2>Meet the ChairPerson</h2>
                         </div>
                     </div>
                 </div>
@@ -329,57 +327,65 @@
                     </div>
                 </section>
                 <div class="wpo-team-wrap">
-                    <div class="team-items">
-                        <div class="row">
-                            <div class="col-lg-3 col-md-6 col-12">
-                                <div class="wpo-team-item">
-                                    <div class="wpo-team-img">
-                                        <img src="assets/images/team/2.jpg" alt="">
-                                    </div>
-                                    <div class="wpo-team-content">
-                                        <h2><a href="team-single.html">Maria Belziana</a></h2>
-                                        <span>Volunteer</span>
-                                    </div>
-                                </div>
+                    <div class="team-slider owl-carousel">
+                        <div class="wpo-team-item">
+                            <div class="wpo-team-img">
+                                <img src="assets/images/team/2.jpg" alt="">
                             </div>
-                            <div class="col-lg-3 col-md-6 col-12">
-                                <div class="wpo-team-item">
-                                    <div class="wpo-team-img">
-                                        <img src="assets/images/team/3.jpg" alt="">
-                                    </div>
-                                    <div class="wpo-team-content">
-                                        <h2><a href="team-single.html">Robert Chirls</a></h2>
-                                        <span>Volunteer</span>
-                                    </div>
-                                </div>
+                            <div class="wpo-team-content">
+                                <h2><a href="#">Advocacy Event</a></h2>
+                                <span>Kano</span>
                             </div>
-                            <div class="col-lg-3 col-md-6 col-12">
-                                <div class="wpo-team-item">
-                                    <div class="wpo-team-img">
-                                        <img src="assets/images/team/4.jpg" alt="">
-                                    </div>
-                                    <div class="wpo-team-content">
-                                        <h2><a href="team-single.html">William Frost</a></h2>
-                                        <span>CEO</span>
-                                    </div>
-                                </div>
+                        </div>
+                        <div class="wpo-team-item">
+                            <div class="wpo-team-img">
+                                <img src="assets/images/team/3.jpg" alt="">
                             </div>
-                            <div class="col-lg-3 col-md-6 col-12">
-                                <div class="wpo-team-item">
-                                    <div class="wpo-team-img">
-                                        <img src="assets/images/team/5.jpg" alt="">
-                                    </div>
-                                    <div class="wpo-team-content">
-                                        <h2><a href="team-single.html">Zenefer Marry</a></h2>
-                                        <span>Maneger</span>
-                                    </div>
-                                </div>
+                            <div class="wpo-team-content">
+                                <h2><a href="#">Sauki Mother's Health Outreach</a></h2>
+                                <span>Jos</span>
+                            </div>
+                        </div>
+                        <div class="wpo-team-item">
+                            <div class="wpo-team-img">
+                                <img src="assets/images/team/4.jpg" alt="">
+                            </div>
+                            <div class="wpo-team-content">
+                                <h2><a href="#">Impact 500</a></h2>
+                                <span>Gombe</span>
+                            </div>
+                        </div>
+                        <div class="wpo-team-item">
+                            <div class="wpo-team-img">
+                                <img src="assets/images/team/5.jpg" alt="">
+                            </div>
+                            <div class="wpo-team-content">
+                                <h2><a href="#">STEM Event</a></h2>
+                                <span>Zaria</span>
+                            </div>
+                        </div>
+                        <div class="wpo-team-item">
+                            <div class="wpo-team-img">
+                                <img src="assets/images/team/6.jpg" alt="">
+                            </div>
+                            <div class="wpo-team-content">
+                                <h2><a href="#">Cottage Donation</a></h2>
+                                <span>Niger</span>
+                            </div>
+                        </div>
+                        <div class="wpo-team-item">
+                            <div class="wpo-team-img">
+                                <img src="assets/images/team/1.jpg" alt="">
+                            </div>
+                            <div class="wpo-team-content">
+                                <h2><a href="#">School Health Outreach</a></h2>
+                                <span>Minna</span>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
         <!--end of team section-->
 
         <!--our special campaigns-->
