--- a/impact500.html
+++ b/impact500.html
@@ -144,17 +144,8 @@
         <!-- end of wpo-about-section -->
 
 		<!-- How we do section -->
-		<section class="wpo-features-section-s5 section-padding bg-green">
+		<section class="wpo-features-section-s5">
 			<div class="container">
-				<div class="row justify-content-center">
-					<div class="col-lg-6">
-						<div class="wpo-section-title">
-							<span>How We Do It</span>
-							<h2>Impacting 500 Young Women</h2>
-                            <p>How we Impact 500 young women every year</p>
-						</div>
-					</div>
-				</div>
                    <!-- start of wpo-features-section -->
                     <section class="wpo-features-section-s5">
                         <div class="container">
